# auto-back-end

./: README.md  auto-back-end.cabal  stack.yaml
src/: Client.hs  InitData.hs  Main.hs  Server.hs  Types.hs
